[project]
name = "document-intelligent-system"
version = "0.1.0"
description = "Production-grade MLOps document intelligence platform"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "lightning",
    "scikit-learn",
    "joblib",
    "mlflow",
    "optuna",
    "ray[default]",
    "redis",
    "confluent-kafka",
    "feast",
    "delta-spark",
    "pyspark",
    "fastapi",
    "uvicorn[standard]",
    "prometheus-client",
    "evidently",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-requests",
    "structlog",
    "captum",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
    "testcontainers",
    "httpx"
]
