[project]
name = "document-intelligent-system"
version = "0.1.0"
description = "Document Intelligence Platform"
requires-python = ">=3.10,<3.13"

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "pyarrow>=14.0.0",
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "transformers>=4.36.0,<5.0.0",
    "optuna>=3.4.0",
    "mlflow>=2.9.0",
    "captum>=0.7.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "prometheus-client>=0.19.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
    "testcontainers>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=html --cov-report=xml"
