[project]
name = "document-intelligent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bentoml>=1.4.39",
    "captum>=0.9.0",
    "click>=8.4.2",
    "confluent-kafka>=2.15.0",
    "delta-spark>=4.3.0",
    "evidently>=0.7.21",
    "fastapi>=0.138.2",
    "feast>=0.1.2.post1",
    "mlflow>=3.14.0",
    "numpy>=2.2.6",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-requests>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "pytorch-lightning>=2.6.5",
    "ray[tune]>=2.56.0",
    "redis>=8.0.1",
    "scikit-learn>=1.7.2",
    "structlog>=26.1.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
    "testcontainers>=4.14.2",
]
